@@ -1,0 +1,5 @@
+Here is some unencrypted content.
+
+And here's a second line to check for, too.
+
+And here's a line which is so long that it will be wrapped which should also potentially cause some interesting things to happen.
